K8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: registry.gitlab.com/yasmine-elmkhantar/qaf/frontend:latest  # ← CHANGER ICI
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gitlab-registry
